--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="22">
     <tr>
-      <td><img class="image circular" src="https://assets.leetcode.com/users/avatars/avatar_1655047993.png" alt="amit profile picture"></td>
+      <td><img class="image-circular" src="https://assets.leetcode.com/users/avatars/avatar_1655047993.png" alt="amit profile picture"></td>
       <td>
         <h1>Amit Pawar</h1>
         <p><em>I'm an <strong>engineering student</strong>.</em></p>
